# pdf-parser

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt
src/pdfparser/: __init__.py
src/pdfparser/parse/: __init__.py  docintel.py  image_analysis.py  parser.py
src/pdfparser/util/: __init__.py  llmclient.py  markdown.py
